[package]
name = "mqtt2influxdb"
description = "Subscribe to MQTT topics and push them to InfluxDB 1.x or v2"
version = "0.2.0"
license = "GPL-3.0-or-later"
repository = "https://github.com/EdJoPaTo/mqtt2influxdb"
authors = ["EdJoPaTo <mqtt2influxdb-rust@edjopato.de>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
# See https://doc.rust-lang.org/rustc/codegen-options/index.html
codegen-units = 1
lto = true

[build-dependencies]
clap = { version = "3", features = ["cargo", "env"] }
clap_complete = "3"
url = "2"

[dependencies]
clap = { version = "3", features = ["cargo", "env", "wrap_help"] }
ctrlc = { version = "3", features = ["termination"] }
rand = "0.8"
reqwest = { version = "0.11", features = ["rustls-tls"], default-features = false }
rumqttc = "0.10"
tokio = { version = "1", features = ["full"] }
url = "2"

[dev-dependencies]
float_eq = "0.7"
