[package]
name = "mqtt2influxdb"
description = "Subscribe to MQTT topics and push them to InfluxDB 1.x or v2"
version = "0.3.0"
license = "GPL-3.0-or-later"
repository = "https://github.com/EdJoPaTo/mqtt2influxdb"
authors = ["EdJoPaTo <mqtt2influxdb-rust@edjopato.de>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
# See https://doc.rust-lang.org/rustc/codegen-options/index.html
codegen-units = 1
lto = true

[build-dependencies]
clap = { version = "3", features = ["derive", "env"] }
clap_complete = "3"
url = "2"

[dependencies]
anyhow = "1"
clap = { version = "3", features = ["derive", "env", "wrap_help"] }
ctrlc = { version = "3", features = ["termination"] }
rand = "0.8"
reqwest = { version = "0.11", features = ["rustls-tls"], default-features = false }
rumqttc = "0.14"
tokio = { version = "1", features = ["macros"] }
url = "2"

[dev-dependencies]
float_eq = "1.0"

# https://crates.io/crates/cargo-deb
[package.metadata.deb]
depends = ""
maintainer-scripts = "systemd/system/"
systemd-units = {}
assets = [
    ["target/release/mqtt2influxdb", "/usr/bin/mqtt2influxdb", "755"],
    ["LICENSE", "/usr/share/licenses/mqtt2influxdb/LICENSE", "644"],
    ["README.md", "/usr/share/doc/mqtt2influxdb/README.md", "644"],

    ["target/completions/mqtt2influxdb.bash", "/usr/share/bash-completion/completions/mqtt2influxdb", "644"],
    ["target/completions/mqtt2influxdb.fish", "/usr/share/fish/completions/mqtt2influxdb.fish", "644"],
    ["target/completions/_mqtt2influxdb", "/usr/share/zsh/site-functions/_mqtt2influxdb", "644"],
]

# https://crates.io/crates/cargo-generate-rpm
[package.metadata.generate-rpm]
assets = [
    { source = "target/release/mqtt2influxdb", dest = "/usr/bin/mqtt2influxdb", mode = "755" },
    { source = "LICENSE", dest = "/usr/share/licenses/mqtt2influxdb/LICENSE", mode = "644", doc = true },
    { source = "README.md", dest = "/usr/share/doc/mqtt2influxdb/README.md", mode = "644", doc = true },

    { source = "systemd/system/service", dest = "/usr/lib/systemd/system/mqtt2influxdb.service", mode = "644" },

    { source = "target/completions/mqtt2influxdb.bash", dest = "/usr/share/bash-completion/completions/mqtt2influxdb", mode = "644" },
    { source = "target/completions/mqtt2influxdb.fish", dest = "/usr/share/fish/vendor_completions.d/mqtt2influxdb.fish", mode = "644" },
    { source = "target/completions/_mqtt2influxdb", dest = "/usr/share/zsh/site-functions/_mqtt2influxdb", mode = "644" },
]
