[package]
name = "mqtt2influxdb"
description = "Subscribe to MQTT topics and push them to InfluxDB 1.x or v2"
version = "2.1.0"
license = "GPL-3.0-or-later"
repository = "https://github.com/EdJoPaTo/mqtt2influxdb"
authors = ["EdJoPaTo <mqtt2influxdb-rust@edjopato.de>"]
edition = "2024"

[lints.rust]
single_use_lifetimes = "warn"
unsafe_code = "forbid"
unused_qualifications = "warn"
[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
allow_attributes = "warn"
min_ident_chars = "warn"
unused_trait_names = "warn"

[profile.release]
codegen-units = 1
lto = true

[build-dependencies]
clap = { version = "4", features = ["deprecated", "derive", "env"] }
clap_complete = "4"
clap_mangen = "0.2"
url = "2"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["deprecated", "derive", "env", "wrap_help"] }
ctrlc = { version = "3", features = ["termination"] }
rand = "0.9"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
rmpv = "1"
rumqttc = "0.24"
serde_json = "1"
tokio = { version = "1", features = ["macros"] }
url = "2"

[dev-dependencies]
float_eq = "1.0"
rstest = { version = "0.25", default-features = false }

# https://crates.io/crates/cargo-deb
[package.metadata.deb]
depends = ""
maintainer-scripts = "systemd/system/"
systemd-units = {}
assets = [
	["target/release/mqtt2influxdb", "/usr/bin/", "755"],
	["CHANGELOG.md", "/usr/share/doc/mqtt2influxdb/", "644"],
	["LICENSE", "/usr/share/licenses/mqtt2influxdb/", "644"],
	["README.md", "/usr/share/doc/mqtt2influxdb/", "644"],

	["target/completions/mqtt2influxdb.bash", "/usr/share/bash-completion/completions/mqtt2influxdb", "644"],
	["target/completions/mqtt2influxdb.fish", "/usr/share/fish/completions/", "644"],
	["target/completions/_mqtt2influxdb", "/usr/share/zsh/site-functions/", "644"],

	["target/manpages/*", "/usr/share/man/man1/", "644"],
]

# https://crates.io/crates/cargo-generate-rpm
[package.metadata.generate-rpm]
assets = [
	{ source = "target/release/mqtt2influxdb", dest = "/usr/bin/", mode = "755" },
	{ source = "CHANGELOG.md", dest = "/usr/share/doc/mqtt2influxdb/", mode = "644", doc = true },
	{ source = "LICENSE", dest = "/usr/share/licenses/mqtt2influxdb/", mode = "644", doc = true },
	{ source = "README.md", dest = "/usr/share/doc/mqtt2influxdb/", mode = "644", doc = true },

	{ source = "systemd/system/service", dest = "/usr/lib/systemd/system/mqtt2influxdb.service", mode = "644" },

	{ source = "target/completions/mqtt2influxdb.bash", dest = "/usr/share/bash-completion/completions/mqtt2influxdb", mode = "644" },
	{ source = "target/completions/mqtt2influxdb.fish", dest = "/usr/share/fish/vendor_completions.d/", mode = "644" },
	{ source = "target/completions/_mqtt2influxdb", dest = "/usr/share/zsh/site-functions/", mode = "644" },

	{ source = "target/manpages/*", dest = "/usr/share/man/man1/", mode = "644", doc = true },
]
